// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea must return the diff between snapshot when TextArea has a disable vs enable autocomplete 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,11 @@
    <div
      className="sc-8buptu-4 cVVWpd"
    >
      <BasicTextAreaStyle
        aria-required={false}
-       autoComplete="off"
+       autoComplete="on"
        id="bar"
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
`;

exports[`TextArea must return the diff between snapshot when TextArea has a enable vs disable spellchecking 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -16,11 +16,11 @@
        id="bar"
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
-       spellCheck={true}
+       spellCheck={false}
        value="baz"
      />
      <label
        className="sc-8buptu-9 foXlmg"
        htmlFor="bar"
`;

exports[`TextArea must return the diff between snapshot when TextArea has a limit of characters or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -12,10 +12,12 @@
    >
      <BasicTextAreaStyle
        aria-required={false}
        autoComplete="off"
        id="bar"
+       maxLength="450"
+       minLength="25"
        name="bar"
        onChange={[Function handleChange]}
        required={false}
        rows={5}
        spellCheck={true}
`;

exports[`TextArea must return the diff between snapshot when TextArea is required or optionnal 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -9,16 +9,16 @@
    </span>
    <div
      className="sc-8buptu-4 cVVWpd"
    >
      <BasicTextAreaStyle
-       aria-required={true}
+       aria-required={false}
        autoComplete="off"
        id="bar"
        name="bar"
        onChange={[Function handleChange]}
-       required={true}
+       required={false}
        rows={5}
        spellCheck={true}
        value="baz"
      />
      <label
`;
